--- a/src/main/resources/templates/newGrade.html
+++ b/src/main/resources/templates/newGrade.html
@@ -7,7 +7,7 @@
 <body>
 
 <form th:method="POST" th:action="@{newGrade}" th:object="${grade}">
-    <label for="name">Enter name: </label>
+    <label for="name">Enter grade: </label>
     <input type="text" th:field="*{grade}" id="name"/>
     <br/>
     <input type="submit" value="Update!"/>
