--- a/src/main/resources/templates/grade.html
+++ b/src/main/resources/templates/grade.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>grade</title>
+    <meta charset="UTF-8" >
+    <title>Grade</title>
 </head>
 <body>
 
-
+<form th:method="PATCH" th:action="@{grade-{id}(id=${grade.getGradeId})}" th:object="${grade}">
+    <label for="name">Enter name: </label>
+    <input type="text" th:field="*{grade}" id="name"/>
+    <br/>
+    <input type="submit" value="Update!"/>
+</form>
 
 </body>
 </html>
